@@ -8,6 +8,7 @@ changes to the API.
  - Allow control of defusedxml settings via zeep.Settings (see #567, #391)
  - Skip the xsd:annotation element in the all:element (#737)
  - Add Settings.force_https as option so that it can be disabled (#605)
+ - Strip spaces from QName's when parsing xsd's (#719)
 
 
 2.5.0 (2018-01-06)
